<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mediumMargin"
        android:background="@drawable/corners_layout"
        android:padding="@dimen/smallPadding">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:src="@drawable/prof"
            android:layout_marginEnd="@dimen/smallMergin"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/mediumMargin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/smallMergin"
            android:fontFamily="sans-serif-black"
            android:text="@string/personName"
            android:textColor="@color/black"
            android:textSize="@dimen/mediumFontSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specialty"
            android:layout_marginBottom="@dimen/smallMergin"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            app:drawableStartCompat="@drawable/ic_baseline_location" />

        <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginTop="@dimen/smallMergin">

          <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/reviews"
             android:textColor="@color/black"
             android:layout_marginEnd="@dimen/teenyPadding"/>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/rating"
              android:layout_marginEnd="@dimen/teenyPadding"
              android:textColor="@color/black"
              android:drawablePadding="@dimen/teenyPadding"
              app:drawableEndCompat="@drawable/ic_baseline_star" />

      </LinearLayout>

    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/mediumMargin"
            android:gravity="end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Time"
                android:background="@drawable/corners_text"
                android:padding="@dimen/smallPadding"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/smallMergin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalDays"
                android:gravity="end"
                android:layout_marginTop="@dimen/smallMergin"/>

        </LinearLayout>

    </LinearLayout>

    </LinearLayout>